css/styles.css
/* Main Styles */




/* Variables declarations */

:root {
    --primary-color: #4033FF;
    --secondary-color: #f5f5ff;
    --auxiliary-color : #EAEAFD;
    --primary-text-color: #000000;
    --secondary-text-color: #ffffff;
    --max-z-index: 100;
}

* {
    font-family: serif;
    color: var(--primary-text-color);
}

h5,h6{
    line-height: 2rem;
}

h1{
    line-height: 3rem;
}

h1,h5 {
    font-weight: bold;
}

h5,h6 {
    opacity: 0.6;
}




/* Navbar css */

nav {
    position: fixed;
    z-index: var(--max-z-index);

    /* ToDo: Don't know why this is needed */
    width: 100%;

    padding: 2rem 1.75rem ;
    background-color: var(--primary-color);
    display: flex;
    justify-content: space-between;
    align-items: center;
}

nav img {
    filter: brightness(2.5);
}

nav ul {
    list-style-type: none;
    margin-bottom: 0;
}

nav ul li {
    display: inline;
}

nav ul li + svg {
    margin-left: 3rem;
}

nav ul svg {
    width:1rem;
    fill: var(--secondary-text-color);
    margin-right: 0.5rem;
}

nav ul li a:hover {
    text-decoration: none;
    color: var(--auxiliary-color);
}

nav ul li a {
    font-weight: bold;
    padding: 0.5rem;
    text-decoration: none;
    color: var(--secondary-text-color);
}





/* first section*/

header + section {

    /* ToDo: should check for better solution*/
    padding-top: 50px;

    background-image: url("../assets/images/Vector-Smart-Object.jpg");
    background-repeat: repeat-x;
    background-position: top;
    height: 100vh;
    width: 100%;
    background-size: 130% 100%;
    display: flex;
}

header + section > article:first-child {
    display: flex ;
    flex-direction: column;
    justify-content: center;
    padding-right: 10%;
    padding-left: 7%;
}

header + section > article:first-child *{
    color: var(--secondary-text-color);
}

header + section > article:first-child *:nth-child(2n-1) {
    opacity: 0.6;
    line-height: 1.5rem;
}

/* ToDo: Find way to extract similar selectors */
header + section > article:first-child *:first-child,
header + section > article:first-child *:nth-child(2) {
    font-weight: bold;
    margin-bottom: 2rem;
}

header + section > article:first-child button {
    width: fit-content;
    background-color: var(--secondary-text-color);
    color: var(--primary-color);
    font-weight: bold;
    border: none;
    border-radius: 20px;
    margin: 3rem 0;
    padding: 0.5rem 2rem;
    outline: none;
}

header + section > article:first-child button:hover {
    opacity: 0.8;
}

header + section > article:nth-child(2) {
    display: flex;
    flex-direction: column;
    padding: 0 5%;
}

header + section > article:nth-child(2) > img {
    position: relative;
}

header + section > article:nth-child(2) > img:first-child {
    top: 10%;
}


header + section > article:nth-child(2) > img:nth-child(2) {
    left: -20%;
    margin-left: 35%;
    margin-top: -5%;
}

header + section > article:nth-child(2) > img:nth-child(3) {
    margin-left: 55%;
    margin-top: -78%;
    left: -54%;
}

header + section > article:nth-child(2) > img:nth-child(4) {
    margin-left: 65%;
    margin-top: -63%;
    left: -101%;
}




/* second section*/

section:nth-child(3) {
    margin-top: 8rem;
    display: flex;
    justify-content: center;
    padding: 0 10rem ;
}

section:nth-child(3) > article:not(:last-child) {
    margin-right: 10%;
}

section:nth-child(3) > article {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

section:nth-child(3) > article > svg {
    width:5rem;
    fill: var(--primary-color);
    margin-bottom: 2.5rem;
}

section:nth-child(3) > article > p:nth-child(2) {
    font-weight: bold;
    font-size: larger;
    margin-bottom: 2rem;
}

section:nth-child(3) > article > p:nth-child(3) {
    opacity: 0.6;
    text-align: center;
}





/* third section*/

section:nth-child(4) {
    margin: 15rem 0 0 0;
    display: flex;
    justify-content: center;
}

section:nth-child(4) > article {
    margin: 0 0 0 2.5rem;
    width: 40%;
    display: flex;
    flex-direction: column;
    justify-content: center;
}

section:nth-child(4) > article > *:nth-child(2n-1) {
    opacity: 0.6;
    line-height: 2rem;
}

section:nth-child(4) > article > *:first-child,
section:nth-child(4) > article > *:nth-child(2) {
    font-weight: bold;
    margin-bottom: 2rem;
}





/* forth section*/

section:nth-child(5) {
    margin: 15rem 0 0 0;
    display: flex;
    flex-direction: row-reverse;
    justify-content: center;
}

section:nth-child(5) > article {
    margin: 0 2.5rem  0 0;
    width: 40%;
    display: flex;
    flex-direction: column;
    justify-content: center;
}

section:nth-child(5) > article > *:nth-child(2n-1) {
    opacity: 0.6;
    line-height: 2rem;
}

section:nth-child(5) > article > *:first-child,
section:nth-child(5) > article > *:nth-child(2) {
    font-weight: bold;
    margin-bottom: 2rem;
}





/* fifth section*/

section.intro-video {
    margin-top: 10rem;
    display: flex;
    flex-direction: column;
    align-items: center;
}

section.intro-video > h5 {
    opacity: 0.6;
}

section.intro-video > h5 , section.intro-video > h1{
    font-weight: bold;
    margin-bottom: 2rem;
}

section.intro-video > div{
    margin-top: 2rem;
    width: 80%;
    height: auto;
}

section.intro-video > article {
    display: flex;
    width: 80%;
}

section.intro-video > article > article {
    width: 50%;
    box-sizing: border-box;
    padding: 7rem 4rem;
    display: flex;
    flex-direction: column;
}

section.intro-video h2 {
    font-weight: bold;
    margin-bottom: 1.5rem;
}

section.intro-video h6 {
    opacity: 0.6;
    line-height: 2rem;
}

section.intro-video h5{
    line-height: 2rem;
}

section.intro-video h5:before {
    content: "+ ";
    color: var(--primary-color);
}





/* sixth section*/

section.plan {
    background-color: var(--secondary-color);
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 7rem 0;
}

section.plan > h5 {
    opacity: 0.6;
}

section.plan > h5 , section.plan > h1{
    font-weight: bold;
    margin-bottom: 2rem;
}

section.plan div {
    width: 100%;
    display: flex;
    justify-content: center;
}

section.plan article {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding: 5rem 1rem;
    width: 22%;
}

section.plan article:nth-child(2) {
    background-color: var(--secondary-text-color);
    border-radius: 10px;
    box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

section.plan article:nth-child(2) button {
    background-color: var(--primary-color);
    color: var(--secondary-text-color);
}

section.plan article:nth-child(2) button:hover {
    background-color: var(--auxiliary-color);
    color: var(--primary-color);
}

section.plan article h1 {
    font-size: xxx-large;
}

section.plan article h6:first-child,section.plan article h1 {
    font-weight: bold;
    margin-bottom: 2.5rem;
}

section.plan article h6:not(:first-child) {
    margin-top: 1rem;
    opacity: 0.6;
    text-align: center;
}

section.plan button {
    width: fit-content;
    background-color: var(--auxiliary-color);
    color: var(--primary-color);
    font-weight: bold;
    border: none;
    border-radius: 20px;
    margin: 3rem 0;
    padding: 0.5rem 2rem;
    outline: none;
}

section.plan button:hover {
    background-color: var(--primary-color);
    color: var(--secondary-text-color);
}




/* seventh section*/

section.feedback {
    position: relative;
    display: flex;
    padding: 10rem 10rem;
    align-items: center;
}

section.feedback article{
    width: 50%;
    display: flex;
    flex-direction: column;
    justify-content: center;
}

section.feedback article:not(:first-child){
    margin-left: 2rem;
    background-color: var(--secondary-color);
    padding: 6rem 3rem;
}

section.feedback p {
    margin-top: 3rem;
    font-weight: bold;
}


section.feedback article img {
    border-radius: 70px;
    margin-right: 80%;
    margin-bottom: 3rem;
}

section.feedback > img {
    position: absolute;
    z-index: -1;
    left: 46%;
    top: 1%;
}



/* eighth section*/

section.subscribe {
    margin: 4rem 30%;
    display: flex;
    flex-direction: column;
    align-items: center;

}

section.subscribe h1 {
    text-align: center;
}

section.subscribe button{
    background-color: var(--primary-color);
    color: var(--auxiliary-color);
    font-weight: bold;
    border: none;
    border-radius: 5px;
    padding: 0.5rem 2rem;
    outline: none;
}

section.subscribe form {
    margin: 2rem 0;
    width: 100%;
    display: flex;
}

section.subscribe input {
    flex-grow: 1;
    padding: 0.375rem 0.75rem;
    font-size: 1rem;
    font-weight: 400;
    line-height: 1.5;
    color: #495057;
    background-color: #fff;
    border: 1px solid #ced4da;
    border-radius: 0.25rem;
    margin-right: 1.5rem;
}

section.subscribe button:hover  {
    background-color: var(--auxiliary-color);
    color: var(--primary-color);
}




/* ninth section*/

section.tech {
    display: flex;
    margin: 15rem 0;
    justify-content: center;
}

section.tech div:not(:last-child):not(:first-child) {
    margin: 2rem 2rem;
}

section.tech article {
    width: calc(90%/4);
    display: flex;
    flex-direction: column;
    box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
    position: relative;
    z-index: var(--max-z-index);
}

section.tech article:not(:last-child) {
    margin-right: 2rem;
}

section.tech h4 {
    margin-bottom: 1rem;
    font-weight: bold;
}

section.tech p:not(:first-child) {
    color: var(--primary-color);
}

section.tech div:last-child{
    font-weight: bold;
    display: flex;
    justify-content: space-between;
    border-top: 1px solid #EAEAEA;
    padding: 1rem 2rem;
}

section.tech div:last-child::after{
    content: "\2192";
    font-weight: bolder;
    /*font-size: x-large;*/
}

section.tech article > div > div{
    width: 100%;
    height: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
}

section.tech article > div > div:hover + img{
    transform: scale(1.5,1.5);
    opacity: 0.6;
    transition-property: transform;
    transition-duration: 0.5s;
}

section.tech article > div > div:hover i {
    color: var(--secondary-color);
    background-color: var(--primary-color);
}

section.tech img {
    width: 100%;
}

section.tech i:hover{
    color: var(--primary-color) !important;
    background-color: var(--secondary-color) !important;
}

section.tech i{
    border-radius: 25px;
    padding: 1rem;
    margin: 1rem;
    background-color: transparent;
    color: transparent;
}

section.tech article > div:first-child{
    overflow: hidden;
    background-color: var(--primary-color);
    position: relative;
    display: flex;
    justify-content: center;
    align-items: center;
}



/*tenth section*/

section.partner {
    display: flex;
    margin: 7rem 14rem 14rem 14rem;
    justify-content: space-between;
}
section.partner img{
    margin:0 2rem;
}

section.partner img{
    width: 100%;
}

